fixed divider spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 hr {
-    margin-top: 0.75rem;
+    margin-bottom: 0.75rem;
 }
 
 input {
